--- a/css/styles.css
+++ b/css/styles.css
@@ -265,3 +265,53 @@ main h2 {
   font-size: 1rem;
 }
 
+.sidebar {
+  width: 220px;
+  background: #f8f9fa;
+  padding: 20px;
+  border-right: 1px solid #ddd;
+  height: 100%;
+  position: fixed;
+  top: 80px;
+  left: 0;
+  overflow-y: auto;
+}
+
+.sidebar h3 {
+  margin-bottom: 15px;
+  color: #333;
+}
+
+.sidebar .menu {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar .menu > li {
+  margin-bottom: 10px;
+}
+
+.sidebar .menu > li > span {
+  font-weight: bold;
+  cursor: pointer;
+  display: block;
+  color: #007acc;
+}
+
+.sidebar .menu li ul {
+  padding-left: 15px;
+  margin-top: 5px;
+}
+
+.sidebar .menu li ul li {
+  margin-bottom: 5px;
+}
+
+.sidebar .menu a {
+  text-decoration: none;
+  color: #444;
+}
+
+.sidebar .menu a:hover {
+  color: #007acc;
+}
